add email verification
